--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rebels VS Empire</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <img src="./images/casqueStrom.png" alt="Casque d'un stormtrooper" class="stormtrooper">
+        <img src="./img/casqueStrom.png" alt="Casque d'un stormtrooper" class="stormtrooper">
         
            <div class="sith">
            <ul >
@@ -49,10 +49,10 @@
     <div class="separation-white"></div>
     <main class="presentation">
     <div class="for heroes">
-        <img src="./images/perso-1.png" alt="sith avec son épéerouge"></img>
-        <img src="./images/perso-2.png" alt="femme avec une épé bleue"></img>
-        <img src="./images/perso-3.png" alt="rebelle"></img>
-        <img src="./images/perso-4.png" alt="stormtrooper pointant son arme"></img>
+        <img src="./img/perso-1.png" alt="sith avec son épéerouge"></img>
+        <img src="./img/perso-2.png" alt="femme avec une épé bleue"></img>
+        <img src="./img/perso-3.png" alt="rebelle"></img>
+        <img src="./img/perso-4.png" alt="stormtrooper pointant son arme"></img>
     </div>
     <div class="separation-white"></div>
     <div class="lorem">
@@ -64,7 +64,7 @@
     <h2>WELCOME</h2>
     <h3>ipsum dolor sit amet.</h3> 
 <div>
-<img src="./images/miniaturePerso.png" alt=""></div>
+<img src="./img/miniaturePerso.png" alt=""></div>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ad velit. Minima delectus, reiciendis porro unde velit dicta sapiente, sint eum labore provident ipsa reprehenderit.</P>
     <label for="read" a href="readmore">read more</label>
 </div>
@@ -108,8 +108,8 @@
         </div>
         <div class="widget">
             <h4>WIDGET FOOTER</h4>
-            <img src="./images/casque1.jpg" alt="2 casques blancs stormtrooper"></img>
-            <img src="./images/casque2.jpg" alt="2 autres casques blancs de stormstrooper"></img>
+            <img src="./img/casque1.jpg" alt="2 casques blancs stormtrooper"></img>
+            <img src="./img/casque2.jpg" alt="2 autres casques blancs de stormstrooper"></img>
         </div>
     </footer>
 </body>
