--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p>54654 main streets</p>
             <p>country</p>
             <p>+ 025 741 3 4441</p>
-            <p>dfqdsdd@fsdfsdf</p>
+            <p>dfqdsdd@fsdfsddgqsdgff</p>
                     </div>
                     
         <div class="map">
