--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 </head>
 <body>
     <header>
+        <div class="menuButton" >
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
         <div class="logo">
             <img src="./img/casqueStrom.png" alt="Casque d'un stormtrooper" class="stormtrooper"></img>
             <h1>REBELS VS EMPIRE</h1>
         </div>
         <nav class="menu">
-           <ul >
+           <ul>
                 <legend>Sith</legend>
                 <div class="red"></div>
                 <li><a href="#">Menu style</a></li>
@@ -100,7 +105,7 @@
                     
         <div class="map">
            <h4>WHERE TO FIND US</h4>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2909.8217956229555!2d5.600599876547267!3d43.17126468346697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9afa01fba6ae7%3A0x67f911ee9b024bf2!2sCentre%20de%20Formation%20Louis%20Benet!5e0!3m2!1sfr!2sfr!4v1700046463696!5m2!1sfr!2sfr" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe id="map_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2909.8217956229555!2d5.600599876547267!3d43.17126468346697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9afa01fba6ae7%3A0x67f911ee9b024bf2!2sCentre%20de%20Formation%20Louis%20Benet!5e0!3m2!1sfr!2sfr!4v1700046463696!5m2!1sfr!2sfr" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="formcontact">
             <h4>CONTACT US</h4>
@@ -120,5 +125,6 @@
             <img src="./img/casque2.jpg" alt="2 autres casques blancs de stormstrooper"></img>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
